client/src/assets/App.css
.title {
  grid-column-start: 2;
  grid-row-start: 2;

  justify-self: center;
}

.startBtn {
  grid-column-start: 2;
  grid-row-start: 2;
  width: 50px;
  height: 50px;
  background-color: #61dafb;
  border-radius: 15px;
  border: 5px solid rgb(144, 210, 245);
  transition: 0.25s ease-in-out;
  animation: App-logo-spin infinite 20s linear;
  min-width: 50px;
  align-self: center;
  justify-self: center;
}

.startBtn:hover {
  background-color: #00bdf1;
  border: 5px solid rgb(94, 136, 242);
}

.startBtnActivated {
  background-color: rgb(173, 255, 169);
  border: 5px solid black;
  opacity: 1;
}

.startBtnBuffer {
  opacity: 0.6;
}

.App {
  height: 100vh;
  width: 100vw;
  display: grid;
  grid-template-rows: 0.1fr 1fr 1fr;
  grid-template-columns: 1fr 1fr 1fr;
  flex-direction: column;
}

.engineer {
  margin-top: 50px;
  grid-row: 2;
  align-self: flex-end;
  grid-column: 2;
}

/* LoggedIn page - start */

.loggedIn {
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-rows: 0.05fr 1fr;
}

.loggedInNavbar {
  padding: 0;
  margin: 0;
  grid-row-start: 1;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

/* LoggedIn page  - End */

/* Logout button - start */

.logoutBtn {
  margin: 0;
  border: 1px solid rgb(0, 0, 0);
  width: 50px;
  height: 50px;
  border-radius: 25px;
  background-image: url("https://cdn.discordapp.com/attachments/463174949310562304/1075952796660146196/IMG_3462.png");
  background-size: cover;
  min-width: 50px;
  transition: 0.25s ease-in-out;
  font: PP Neue Montreal;
}

.logoutBtnClicked {
  border: 1px solid #00bdf1;
}

.logoutBtn:hover,
.logoutBtnClicked:hover {
  opacity: 0.8;
}

.logoutPop {
  position: absolute;
  border: 2px solid rgb(0, 0, 0);
  background-color: #5199ad;
  border-radius: 25px;
  margin-left: -70px;
  margin-top: 10px;
}

.logoutPop ul {
  height: 100%;
  list-style: none;
  margin: 0;
  padding: 0;
  display: grid;
  gap: 2px;
  grid-template-rows: 1fr 1fr 1fr;
  justify-items: left;
  align-items: center;
  user-select: none;
  transition: 0.25s ease-in-out;
  color: white;
}

.logoutPop ul button {
  transition: 0.25s ease-in-out;
  border-radius: 25px;
  display: flex;
  align-items: center;
  /* padding: 15px; */
  /* min-width: 90px; */
  width: 115px;
}

.logoutPop ul button p {
  font-family: "Roboto", sans-serif;
  margin-left: 10px;
}

.logoutPop button:hover {
  background-color: rgba(8, 8, 8, 0.61);
}

.logoutBtnCover {
  min-width: 50px;
  border-radius: 25px;
  width: 50px;
  margin-right: 10px;
  margin-top: 10px;
}

.individualBtn {
  /* position: absolute; */

  /* left: 0; */
  /* width: 50px; */
  /* min-width: 40px; */
  display: flex;
  align-items: center;
  gap: 20px;
  height: 40px;
  background-color: transparent;
  color: none;
  border-radius: 25px;
  /* padding: 0; */
  margin: 0;
  /* text-align: center; */
  /* margin-left: 50px; */
  cursor: pointer;
}

.individualBtn svg {
  height: 15px;
  width: 15px;
}

.individualBtn:hover {
  background-color: transparent;
}

/* Logout button - end */

/* Login button - start */

.loginBtn {
  width: 200px;
  height: 50px;
}

/* Login button - end */

.btnWrap {
  grid-row-start: 3;
  grid-column-start: 2;
}

/* signUp button - start */

.signupBtn {
  width: 200px;
  height: 50px;
  font: PP Neue Montreal;
}

/* signUp button - end */
@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

